# synapse-collateral

./: .gitignore  .mcpbignore  CLAUDE.md  Makefile  README.md  manifest.json  mpak.json  pyproject.toml  server.json
.github/workflows/: release.yml
scripts/: gen-types.py
src/mcp_collateral/: REFERENCE.md  SKILL.md  __init__.py  brand.py  compiler.py  models.py  server.py  store.py  templates.py  theme.py  ui.py  workspace.py
templates/advisory-deck/: meta.json  template.typ
templates/deep-agent-method/: meta.json  template.typ
templates/invoice/: meta.json  template.typ
templates/lead-magnet/: meta.json  template.typ
templates/one-pager/: meta.json  template.typ
templates/proposal/: meta.json  template.typ
templates/resume/: meta.json  template.typ
tests/: test_custom_instructions.py  test_patch_source.py  test_store.py  test_theme_parser.py  test_tool_contracts.py  test_upload_asset.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx  resources.ts  styles.ts  theme-utils.ts  types.ts
ui/src/components/: AssetUpload.tsx  Dialog.tsx  PDFViewer.tsx  SettingsPanel.tsx  TopNav.tsx
ui/src/hooks/: useAssets.ts  useBrand.ts  useComponents.ts  useDocuments.ts  useExport.ts  usePreview.ts  useTemplates.ts
ui/src/styles/: responsive.ts
ui/src/views/: AssetsView.tsx  ComponentsView.tsx  DocumentsView.tsx  PreviewPane.tsx  TemplatesView.tsx
