[project]
name = "mcp-collateral"
version = "0.6.0"
description = "Collateral Studio — Typst-powered document generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    { name = "NimbleBrain Inc", email = "hello@nimblebrain.ai" },
]
keywords = ["mcp", "typst", "pdf", "generation"]
dependencies = [
    "fastmcp>=2.14.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_collateral"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "ty>=0.0.1a1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
